--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home | sidneyluiz.github.io</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="Sidney Rodrigues">
         <!--The meta element below is for responsive behavior-->
         <meta name="viewport" content="width=device-width">
@@ -25,10 +26,14 @@
             </ul>
         </nav>
         <main><h1>Sidney Rodrigues</h1>
-        <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
+            <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
             <h2>Assignments</h2>
         </main>
-        <footer>Site Related Policies, Abouts, etc...</footer>
+        <footer>
+            <small>
+                Last Updated: 20 January 2018
+            </small>
+        </footer>
 
     </body>
 
