--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
             <h2>Assignments</h2>
             <ul>
-            <li><a href=˜/parc.html˜ title="Design Analysis Assignment">Design Analysis</li>
+            <li><a href=˜parc.html˜ title="Design Analysis Assignment">Design Analysis</li>
             </ul>
         </main>
         <footer>
