--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Home | sidneyluiz.github.io</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="author" content="Sidney Rodrigues">
-        <!--The meta element below is for responsive behavior-->
-        <meta name="viewport" content="width=device-width">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Home | sidneyluiz.github.io</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Sidney Rodrigues">
+    <!--The meta element below is for responsive behavior-->
+    <meta name="viewport" content="width=device-width">
+</head>
 
-    <body>
-        <header>
-            Logo, Site Name
-        </header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
+<body>
+    <header>
+        Logo, Site Name
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
 
-                <li>
-                    <a href="#">About</a>
-                </li>
-            </ul>
-        </nav>
-        <main><h1>Sidney Rodrigues</h1>
-            <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
-            <h2>Assignments</h2>
-            <ul>
-            <li><a href=˜parc.html˜ title="Design Analysis Assignment">Design Analysis</li>
-            </ul>
-        </main>
-        <footer>
-            <small>
+            <li>
+                <a href="#">About</a>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Sidney Rodrigues</h1>
+        <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
+        <h2>Assignments</h2>
+        <ul>
+            <li> <a href="parc.html" title="Desigh Analysis Assignment"> Design Analysis</a></li>
+        </ul>
+    </main>
+    <footer>
+        <small>
                 Last Updated: 20 January 2018
             </small>
-        </footer>
+    </footer>
 
-    </body>
+</body>
 
 </html>
