--- a/parc.html
+++ b/parc.html
@@ -169,6 +169,7 @@
 
         <p>Copyright &copy; 2018 Sidney Rodrigues</p>
         <a href="mailto:sidneyluiz@byui.edu" id="mail" title="e-mail">sidneyluiz@byui.edu</a>
+        <small>Last Updated: 26 January 2018</small>
     </footer>
 </body>
 
