--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <title>Home | sidneyluiz.github.io</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="Sidney Rodrigues">
-    <!--The meta element below is for responsive behavior-->
-    <meta name="viewport" content="width=device-width">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>Home | sidneyluiz.github.io</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="author" content="Sidney Rodrigues">
+        <!--The meta element below is for responsive behavior-->
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
 
-<body>
-    <header>
-        Logo, Site Name
-    </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="images/sidney-rodrigues.png" alt="Sidney Rodrigues Photo">
+                <h3>Sidney Luiz Rodrigues Junior</h3>
+                <h4>CIT230</h4>
+            </div>
+        </header>
 
-            <li>
-                <a href="#">About</a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Sidney Rodrigues</h1>
-        <p>Hey, I'm Sidney. I'm from Brazil, I'm 28 years old and I have two kids, my boy is 3 years old and my girl is 1 month old.</p>
-        <h2>Assignments</h2>
-        <ul>
-            <li> <a href="parc.html" title="Desigh Analysis Assignment"> Design Analysis</a></li>
-        </ul>
-    </main>
-    <footer>
-        <small>
-                Last Updated: 26 January 2018
-            </small>
-    </footer>
+        <main>
+            <section class="rw-wrapper">
+                <h2 class="rw-sentence">
+                    Hello, I am
+                    <div class="rw-words rw-words-1">
+                        <span>an e-commerce developer.</span>
+                        <span>a freelancer.</span>
+                        <span>a web developer.</span>
+                        <span>an inventor.</span>
+                        <span>a wordpress fan.</span>
+                        <span>a chocolate lover.</span>
+                    </div>
+                    <br/>
+                    I live in a small town somewhere in the world.<br/> I'm 27 years old, I have <strong>two kids, and a beautiful wife.</strong>
+                    <br/>
+                </h2>
+            </section>
 
-</body>
+            <div class="greydivpad">
+                <h2>Assignments</h2>
+                <ul class="decimal">
+                    <li><a href="parc.html" title="Desigh Analysis Assignment" class="button"> Design Analysis</a></li>
+                </ul>
+                <br/>
+                <br/>
+            </div>
+        </main>
+
+        <footer>
+            <p>Copyright &copy; 2018 Sidney Rodrigues</p>
+            <a href="mailto:sidneyluiz@byui.edu" id="mail">sidneyluiz@byui.edu</a> -
+            <small>Last Updated: 26 January 2018</small>
+        </footer>
+
+    </body>
 
 </html>
