--- a/parc.html
+++ b/parc.html
@@ -168,8 +168,7 @@
     <footer>
 
         <p>Copyright &copy; 2018 Sidney Rodrigues</p>
-        <a href="mailto:sidneyluiz@byui.edu" id="mail" title="e-mail">sidneyluiz@byui.edu</a>
-        <br/>
+        <a href="mailto:sidneyluiz@byui.edu" id="mail" title="e-mail">sidneyluiz@byui.edu</a> -
         <small>Last Updated: 26 January 2018</small>
     </footer>
 </body>
