--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <section class="rw-wrapper">
                 <h2 class="rw-sentence">
                     Hello, I am
-                    <p class="rw-words rw-words-1">
+                    <span class="rw-words rw-words-1">
                         <span>an e-commerce developer.</span>
                         <span>a freelancer.</span>
                         <span>a web developer.</span>
                         <span>an inventor.</span>
                         <span>a wordpress fan.</span>
                         <span>a chocolate lover.</span>
-                    </p>
+                    </span>
                     <br/>
                     I live in a small town somewhere in the world.<br/> I'm 27 years old, I have <strong>two kids, and a beautiful wife.</strong>
                     <br/>
