--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <main>
             <section class="rw-wrapper">
                 <h2 class="rw-sentence">
-                    Hello, I am                    <span class="rw-words rw-words-1">
+                    Hello, I am
+                    <span class="rw-words rw-words-1">
                         <span>an e-commerce developer.</span>
                         <span>a freelancer.</span>
                         <span>a web developer.</span>
