--- a/parc.html
+++ b/parc.html
@@ -4,6 +4,8 @@
 <head>
     <title>Design Analysis</title>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Sidney Rodrigues">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -169,7 +171,7 @@
 
         <p>Copyright &copy; 2018 Sidney Rodrigues</p>
         <a href="mailto:sidneyluiz@byui.edu" id="mail" title="e-mail">sidneyluiz@byui.edu</a> -
-        <small>Last Updated: 26 January 2018</small>
+        <small>Last Updated: 27 January 2018</small>
     </footer>
 </body>
 
