--- a/index.html
+++ b/index.html
@@ -1,59 +1,58 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Home | sidneyluiz.github.io</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="author" content="Sidney Rodrigues">
-        <!--The meta element below is for responsive behavior-->
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Home | sidneyluiz.github.io</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Sidney Rodrigues">
+    <!--The meta element below is for responsive behavior-->
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-    <body>
-        <header>
-            <div class="logo">
-                <img src="images/sidney-rodrigues.png" alt="Sidney Rodrigues Photo">
-                <h3>Sidney Luiz Rodrigues Junior</h3>
-                <h4>CIT230</h4>
-            </div>
-        </header>
+<body>
+    <header>
+        <div class="logo">
+            <img src="images/sidney-rodrigues.png" alt="Sidney Rodrigues Photo">
+            <h3>Sidney Luiz Rodrigues Junior</h3>
+            <h4>CIT230</h4>
+        </div>
+    </header>
 
-        <main>
-            <section class="rw-wrapper">
-                <h2 class="rw-sentence">
-                    Hello, I am
-                    <span class="rw-words rw-words-1">
+    <main>
+        <section class="rw-wrapper">
+            <h2 class="rw-sentence">
+                Hello, I am
+                <span class="rw-words rw-words-1">
                         <span>an e-commerce developer.</span>
-                        <span>a freelancer.</span>
-                        <span>a web developer.</span>
-                        <span>an inventor.</span>
-                        <span>a wordpress fan.</span>
-                        <span>a chocolate lover.</span>
-                    </span>
-                    <br/>
-                    I live in a small town somewhere in the world.<br/> I'm 27 years old, I have <strong>two kids, and a beautiful wife.</strong>
-                    <br/>
-                </h2>
-            </section>
-
-            <div class="greydivpad">
-                <h2>Assignments</h2>
-                <ul class="decimal">
-                    <li><a href="parc.html" title="Desigh Analysis Assignment" class="button"> Design Analysis</a></li>
-                </ul>
+                <span>a freelancer.</span>
+                <span>a web developer.</span>
+                <span>an inventor.</span>
+                <span>a wordpress fan.</span>
+                <span>a chocolate lover.</span>
+                </span>
+                <br/> I live in a small town somewhere in the world.<br/> I'm 27 years old, I have <strong>two kids, and a beautiful wife.</strong>
                 <br/>
-                <br/>
-            </div>
-        </main>
+            </h2>
+        </section>
 
-        <footer>
-            <p>Copyright &copy; 2018 Sidney Rodrigues</p>
-            <a href="mailto:sidneyluiz@byui.edu" id="mail">sidneyluiz@byui.edu</a> -
-            <small>Last Updated: 27 January 2018</small>
-        </footer>
+        <div class="greydivpad">
+            <h2>Assignments</h2>
+            <ul class="decimal">
+                <li><a href="parc.html" title="Desigh Analysis Assignment" class="button"> Design Analysis</a></li>
+            </ul>
+            <br/>
+            <br/>
+        </div>
+    </main>
 
-    </body>
+    <footer>
+        <p>Copyright &copy; 2018 Sidney Rodrigues</p>
+        <a href="mailto:sidneyluiz@byui.edu" id="mail">sidneyluiz@byui.edu</a> -
+        <small>Last Updated: 27 January 2018</small>
+    </footer>
+
+</body>
 
 </html>
