--- a/parc.html
+++ b/parc.html
@@ -159,6 +159,7 @@
                         <li>Age - 27</li>
                         <li>Occupation - Recently married accountant</li>
                         <li>Primary Device - Iphone X, Macbook Pro</li>
+                        <li>Quote - I love Amazon, because I can buy all the things that I love in one place and cheaper than other places.</li>
                     </ul>
                 </div>
             </article>
