--- a/parc.html
+++ b/parc.html
@@ -172,7 +172,7 @@
 
         <p>Copyright &copy; 2018 Sidney Rodrigues</p>
         <a href="mailto:sidneyluiz@byui.edu" id="mail" title="e-mail">sidneyluiz@byui.edu</a> -
-        <small>Last Updated: 27 January 2018</small>
+        <small><a href="http://google.com">Last Updated:</a> 27 January 2018</small>
     </footer>
 </body>
 
