--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <h2>Assignments</h2>
             <ul class="decimal">
                 <li><a href="parc.html" title="Desigh Analysis Assignment" class="button"> Design Analysis</a></li>
+                <li><a href="/weather/weather-plan.html" title="Weather Website Plan" class="button"> Weather Site Plan</a></li>
             </ul>
             <br/>
             <br/>
