--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <li><a href="parc.html" title="Desigh Analysis Assignment" class="button"> Design Analysis</a></li>
                 <br/>
                 <li><a href="/weather/weather-plan.html" title="Weather Website Plan" class="button"> Weather Site Plan</a></li>
+                <br/>
+                <li><a href="/weather/franklin.html" title="Franklin, ID Weather Page" class="button"> Franklin Weather Page</a></li>
             </ul>
             <br/>
             <br/>
