--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -1,11 +1,52 @@
 <!doctype html>
 <html lang="en-us">
  <head>
-  <meta charset="UTF-8">
-  <title>Franklin, ID | Weather Site</title>
-  <meta name="description" content="Short Description of the page.">
-  <meta name="viewport" content="width=device-width">
- </head>
- <body>   
- </body>
+    <meta charset="UTF-8">
+    <title>Franklin, ID | Weather Site</title>
+    <meta name="description" content="Franklin, ID Weather Page.">
+    <meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+    <header>
+        <img src="/weather/images/logo.jpeg" alt="Weather Site Logo">
+        <h1>The Weather Site</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="/index.html" title="Go to home page">Home</a></li>
+            <li><a href="#" title="Search content in the website">Search</a></li>
+            <li><a href="/weather/franklin.html" title="Go to Franklin weather page">Franklin</a></li>
+            <li><a href="/weather/greenville.html" title="Go to Greenville weather page">Greenville</a></li>
+            <li><a href="/weather/springfield.html" title="Go to Springfield weather page">Springfield</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Franklin, Idaho</h2>
+        <p><b>Zip:</b> 83237 | <b>Elevation:</b> 4501 ft. |<b>Location:</b> 42.0135&deg; N,111.8072&deg; W</p>
+
+        <h3>Temperature</h3>
+        <p>
+            <font size="6">24&deg;F</font><br>
+            <font color="red">34F</font>
+            <font color="blue">21F</font><br> Feels like 21F</p>
+
+        <h3>Wind</h3>
+        <p>N <br>2 mph <br>
+            <b>Direction</b>: NW<br>
+            <b>Gusts</b>: 5mph</p>
+
+        <h3>Video Forecast</h3>
+
+        <span><font size="10">&#x022A0;</font></span>
+
+        <h3>Hourly Forecast</h3>
+        <p>
+            12am: 21F | 1am: 21F | 2am: 21F | 3am: 20F | 4am: 20F | 5am: 20F | 6am: 20F | 7am: 21F | 8am: 21F
+        </p>
+    </main>
+    <footer>
+        &copy;2018 Weather Site
+    </footer>
+</body>
 </html>
