--- a/weather/weather-plan.html
+++ b/weather/weather-plan.html
@@ -52,7 +52,7 @@
 
         <h2>Branding</h2>
         <p>The client provided the following initial concept for a name and logo:</p>
-        <big><strong><em>The Weather Site</em></strong></big><br>
+        <h3><strong><em>The Weather Site</em></strong></h3><br>
         <img src="/weather/images/logo.jpeg" alt="The Weather Site Plan Logo.">
 
         <h2>Typography</h2>
