--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -26,10 +26,9 @@
         <p><b>Zip:</b> 83237 | <b>Elevation:</b> 4501 ft. |<b>Location:</b> 42.0135&deg; N,111.8072&deg; W</p>
 
         <h3>Temperature</h3>
-        <p>
-            <font size="10">24&deg;F</font><br>
-            <font color="red">34F</font>
-            <font color="blue">21F</font><br> Feels like 21F</p>
+
+            <h3>24&deg;F</h3><br>
+        <p>34F 21F<br> Feels like 21F</p>
 
         <h3>Wind</h3>
         <p>N <br>2 mph <br>
@@ -38,7 +37,7 @@
 
         <h3>Video Forecast</h3>
 
-        <span><font size="10">&#x022A0;</font></span>
+        <span>&#x022A0;</span>
 
         <h3>Hourly Forecast</h3>
         <p>
