--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -27,7 +27,7 @@
 
         <h3>Temperature</h3>
 
-            <h3>24&deg;F</h3><br>
+            <h3>24&deg;F</h3>
         <p>34F 21F<br> Feels like 21F</p>
 
         <h3>Wind</h3>
