--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -52,6 +52,10 @@
 
                 <section id="wind">
                     <h2>Wind</h2>
+                    <span id="north">N</span>
+                    <div id="dial">
+                        <img src="/weather/images/wind-pointer.png" alt="Dial to indicate the direction of the wind">
+                    </div>
                     <p>2 mph</p>
                     <p><b>Direction</b>: NW</p>
                     <p><b>Gusts</b>: 5mph</p>
@@ -60,8 +64,7 @@
 
             <section id="video">
                 <h3>Video Forecast</h3>
-
-                <span>&#x022A0;</span>
+                <img src=/weather/images/video.png alt="Video Player Image">
             </section>
         </div>
 
