--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <li><a href="/weather/weather-plan.html" title="Weather Website Plan" class="button"> Weather Site Plan</a></li>
 
                 <li><a href="/weather/franklin.html" title="Franklin, ID Weather Page" class="button"> Franklin Weather Page</a></li>
+
+                <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Media</a></li>
             </ul>
             <br/>
             <br/>
