--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <li><a href="/weather/franklin.html" title="Franklin, ID Weather Page" class="button"> Franklin Weather Page</a></li>
 
                 <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Media</a></li>
+
+                <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Wheather Images</a></li>
             </ul>
             <br/>
             <br/>
