--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Media</a></li>
 
-                <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Wheather Images</a></li>
+                <li><a href="/weather-images.html" title="Responsive wheather page images" class="button">Responsive Wheather Images</a></li>
             </ul>
             <br/>
             <br/>
