--- a/responsive-media/index.html
+++ b/responsive-media/index.html
@@ -52,7 +52,10 @@
                 Mandaremus minim o expetendis consectetur. Aliqua exercitation mandaremus amet arbitror. Proident ne quis voluptate. Litteris nulla eram voluptate anim a amet commodo relinqueret. Ne dolor consectetur in ingeniis sed laborum. Summis exercitation aliquip legam quamquam, laboris cillum labore o dolore. Varias ubi probant ab labore.
             </p>
 
+
+
         </main>
+
         <footer class="page-footer">
             <ul>
                 <li>&copy; Fake Copyright Notice</li>
@@ -63,6 +66,9 @@
             <p class="credits">Photo Credits: Grand Canyon Images - (Blaine Robertson); National Park Service Logo and video - (National Park Service)</p>
         </footer>
     </div>
+
+    <embed src="/responsive-media/presentation.swf" width="1000" height="1000">
+
 </body>
 
 </html>
