--- a/weather-images.html
+++ b/weather-images.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Design Analysis</title>
+        <title>Resposive Weather Images</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="Sidney Rodrigues">
