--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -37,7 +37,7 @@
 
 
                 <!-- curWeather holds temps, wind and video data -->
-                <div id="curWeather">
+                <div  id="curWeather" class="clear">
                     <!-- smallConditions holds temps, wind data -->
                     <div id="smallConditions">
 
@@ -53,8 +53,7 @@
                         <section id="wind">
                             <h2>Wind</h2>
                             <span id="north">N</span>
-                            <div id="dial">
-                                <img src="/weather/images/wind-pointer.png" alt="Dial to indicate the direction of the wind">
+                            <div id="dial" class="w">
                             </div>
                             <p id="speed">8 mph</p>
                             <p><b>Direction</b>: SW</p>
@@ -103,5 +102,6 @@
                 &copy;2018 Weather Site
             </footer>
         </div>
+        <script src="/weather/js/functions.js"></script>
     </body>
 </html>
