--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -57,7 +57,7 @@
                     <div id="dial" class="n">
                     </div>
                     <p id="speed">2 mph</p>
-                    <p><b>Direction</b>: NW</p>
+                    <p><b>Direction</b>: <span id="directionLabel">NW</span></p>
                     <p><b>Gusts</b>: 5mph</p>
                 </section>
             </div>
