--- a/weather/greenville.html
+++ b/weather/greenville.html
@@ -56,7 +56,7 @@
                             <div id="dial" class="w">
                             </div>
                             <p id="speed">8 mph</p>
-                            <p><b>Direction</b>: SW</p>
+                            <p><b>Direction</b>: <span id="directionLabel">NW</span></p>
                             <p><b>Gusts</b>: 5mph</p>
                         </section>
                     </div>
