--- a/weather/index.html
+++ b/weather/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home Page | Weather Site</title>
+    <title><span id="cityState">Home Page</span> | Weather Site</title>
     <meta name="description" content="Home Page Weather Page.">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/weather/css/screen.css">
@@ -30,7 +30,7 @@
        <p id="status" class="hide"></p>
        <main>
 
-        <h1>Home Page</h1>
+           <h1><span id="cityState">Home Page</span></h1>
 
         <div id="locationInfo">
             <p><b>Zip:</b> <span id="zip">83237</span> |<b>Elevation:</b> <span id="elevation">4501 ft.</span> |<b>Location:</b> <span id="location">42.07&deg; S,111.79&deg; W</span></p>
