--- a/weather/index.html
+++ b/weather/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title><span id="cityState">Home Page</span> | Weather Site</title>
+    <title id="cityState"></title>
     <meta name="description" content="Home Page Weather Page.">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/weather/css/screen.css">
