--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -20,7 +20,7 @@
 
     <nav>
         <ul>
-            <li><a href="/index.html" title="Go to home page">Home</a></li>
+            <li><a href="/weather/index.html" title="Go to home page">Home</a></li>
             <li><a href="#" title="Search content in the website">Search</a></li>
             <li><a href="/weather/franklin.html" title="Go to Franklin weather page">Franklin</a></li>
             <li><a href="/weather/greenville.html" title="Go to Greenville weather page">Greenville</a></li>
