--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <li><a href="/responsive-media/index.html" title="Responsive Media Assignment" class="button">Responsive Media</a></li>
 
                 <li><a href="/weather-images.html" title="Responsive wheather page images" class="button">Responsive Wheather Images</a></li>
+
+                <li><a href="/weather/index.html" title="Home weather page" class="button">Current Location Weather Page</a></li>
             </ul>
             <br/>
             <br/>
