--- a/weather/index.html
+++ b/weather/index.html
@@ -63,8 +63,8 @@
             </div>
 
             <section id="video">
-                <h2>Video Forecast</h2>
-                <img src=/weather/images/video.png alt="Video Player Image">
+                <h2 id="hVideo">Video Forecast</h2>
+                <img id="imgVideo" src=/weather/images/video.png alt="Video Player Image">
             </section>
         </div>
 
