--- a/weather/index.html
+++ b/weather/index.html
@@ -27,8 +27,8 @@
             <li><a href="/weather/springfield.html" title="Go to Springfield weather page">Springfield</a></li>
         </ul>
     </nav>
-       <p id="status" class="hide"></p>
-       <main>
+       <p id="status"></p>
+       <main id="content" class="hide">
 
            <h1 id="cityStateH">Home Page</h1>
 
@@ -100,7 +100,7 @@
     </main>
        <div class="linha"></div>
     <footer>
-        &copy;2018 Weather Site
+        &copy;2018 Weather Site <img id="imgCreIcon" src="#" alt="Icon Credit to Weather Underground">
     </footer>
     </div>
     <script src="/weather/js/functions.js"></script>
