--- a/weather/index.html
+++ b/weather/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title id="cityStateT">Weather Page</title>
     <meta name="description" content="Home Page Weather Page.">
+    <link id="favicon" rel="shortcut icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/weather/css/screen.css">
 </head>
@@ -71,30 +72,30 @@
         <section id="hourly">
             <h2>Hourly Forecast</h2>
             <ul>
-                <li>12am: <span id="0">21&deg;F</span></li>
-                <li>1am: <span id="1">21&deg;F</span></li>
-                <li>2am: <span id="2">20&deg;F</span></li>
-                <li>3am: <span id="3">20&deg;F</span></li>
-                <li>4am: <span id="4">20&deg;F</span></li>
-                <li>5am: <span id="5">20&deg;F</span></li>
-                <li>6am: <span id="6">20&deg;F</span></li>
-                <li>7am: <span id="7">21&deg;F</span></li>
-                <li>8am: <span id="8">25&deg;F</span></li>
-                <li>9am: <span id="9">28&deg;F</span></li>
-                <li>10am: <span id="10">30&deg;F</span></li>
-                <li>11am: <span id="11">34&deg;F</span></li>
-                <li>12pm: <span id="12">35&deg;F</span></li>
-                <li>1pm: <span id="13">37&deg;F</span></li>
-                <li>2pm: <span id="14">38&deg;F</span></li>
-                <li>3pm: <span id="15">39&deg;F</span></li>
-                <li>4pm: <span id="16">39&deg;F</span></li>
-                <li>5pm: <span id="17">38&deg;F</span></li>
-                <li>6pm: <span id="18">36&deg;F</span></li>
-                <li>7pm: <span id="19">34&deg;F</span></li>
-                <li>8pm: <span id="20">33&deg;F</span></li>
-                <li>9pm: <span id="21">33&deg;F</span></li>
-                <li>10pm: <span id="22">31&deg;F</span></li>
-                <li>11pm: <span id="23">31&deg;F</span></li>
+                <li>12am: <span id="zero">21&deg;F</span></li>
+                <li>1am: <span id="one">21&deg;F</span></li>
+                <li>2am: <span id="two">20&deg;F</span></li>
+                <li>3am: <span id="three">20&deg;F</span></li>
+                <li>4am: <span id="four">20&deg;F</span></li>
+                <li>5am: <span id="five">20&deg;F</span></li>
+                <li>6am: <span id="six">20&deg;F</span></li>
+                <li>7am: <span id="seven">21&deg;F</span></li>
+                <li>8am: <span id="eight">25&deg;F</span></li>
+                <li>9am: <span id="nine">28&deg;F</span></li>
+                <li>10am: <span id="ten">30&deg;F</span></li>
+                <li>11am: <span id="eleven">34&deg;F</span></li>
+                <li>12pm: <span id="twelve">35&deg;F</span></li>
+                <li>1pm: <span id="thirteen">37&deg;F</span></li>
+                <li>2pm: <span id="fourteen">38&deg;F</span></li>
+                <li>3pm: <span id="fifteen">39&deg;F</span></li>
+                <li>4pm: <span id="sixteen">39&deg;F</span></li>
+                <li>5pm: <span id="seventeen">38&deg;F</span></li>
+                <li>6pm: <span id="eighteen">36&deg;F</span></li>
+                <li>7pm: <span id="nineteen">34&deg;F</span></li>
+                <li>8pm: <span id="twenty">33&deg;F</span></li>
+                <li>9pm: <span id="twentyOne">33&deg;F</span></li>
+                <li>10pm: <span id="twentyTwo">31&deg;F</span></li>
+                <li>11pm: <span id="twentyThree">31&deg;F</span></li>
             </ul>
         </section>
     </main>
