--- a/weather/franklin.html
+++ b/weather/franklin.html
@@ -48,7 +48,7 @@
                     <h3 id="tempRightNow">24&deg;F</h3>
                     <p id="hot">34&deg;F</p>
                     <p id="cold">21&deg;F</p>
-                    <p id="feels">??</p>
+                    <p id="feels">Feels like 40&deg;F</p>
                 </section>
 
                 <section id="wind">
