--- a/weather/search.html
+++ b/weather/search.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title id="cityStateT">Weather Page</title>
+    <title id="cityStateT">Search Weather Page</title>
     <meta name="description" content="Home Page Weather Page.">
     <link id="favicon" rel="shortcut icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width">
@@ -16,7 +16,7 @@
         <div class="logo">
             &#9748;
         </div>
-        <h1 class="site-title">The Weather Site</h1>
+        <h1 class="site-title">Search Weather Page</h1>
     </header>
 
     <nav>
@@ -28,7 +28,15 @@
             <li><a href="/weather/springfield.html" title="Go to Springfield weather page">Springfield</a></li>
         </ul>
     </nav>
+       <section>
+           <form method="get" action="https://wunderground.com/" id="searchform">
+               <input type="search" name="query" id="query">
+               <input type="submit" name="submit" value="Search" id="send">
+           </form>
+           <div id="searchResults"></div>
+       </section>
        <p id="status"></p>
+
        <main id="content" class="hide">
 
            <h1 id="cityStateH">Home Page</h1>
@@ -105,6 +113,6 @@
     </footer>
     </div>
     <script src="/weather/js/functions.js"></script>
-    <script src="/weather/js/geo_loc.js"></script>
+    <script src="/weather/js/search.js"></script>
 </body>
 </html>
