--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                 <li><a href="/weather-images.html" title="Responsive wheather page images" class="button">Responsive Wheather Images</a></li>
 
                 <li><a href="/weather/index.html" title="Home weather page" class="button">Current Location Weather Page</a></li>
+
+                <li><a href="/weather/search.html" title="search weather page" class="button">Search Tool Assessment</a></li>
             </ul>
             <br/>
             <br/>
