--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <li><a href="/weather/index.html" title="Home weather page" class="button">Current Location Weather Page</a></li>
 
                 <li><a href="/weather/search.html" title="search weather page" class="button">Search Tool Assessment</a></li>
+
+                <li><a href="/acme/template.html" title="acme template page" class="button">Acme Template</a></li>
+
+                <li><a href="/acme/index.html" title="acme project page" class="button">Acme Project</a></li>
             </ul>
             <br/>
             <br/>
