--- a/acme/index.html
+++ b/acme/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
 
-        <princ id="princ" class="show">
+        <main id="princ" class="show">
             <h1> &nbsp; Welcome to Acme!</h1>
 
             <section id="banner">
@@ -78,12 +78,12 @@
                     </div>
                 </section>
             </div>
-        </princ>
+        </main>
 
         <div id="contentInfo" class="hide">
-            <h1 id="name"></h1>
+            <h1 id="name">name</h1>
             <div id="details">
-                <img id="image" src="" alt="">
+                <img id="image" src="#" alt="">
                 <section id="info">
                     <p id="desc"></p>
                     <ul>
