--- a/acme/index.html
+++ b/acme/index.html
@@ -29,14 +29,18 @@
             <h1> &nbsp; Welcome to Acme!</h1>
 
             <section id="banner">
-                <ul>
-                    <h2>Acme Rocket</h2>
+
+                    <ul>
+                        <li class="nolist"><h2>Acme Rocket</h2></li>
                     <li>Quick lighting fuse</li>
                     <li>NHTSA approved seat belts</li>
                     <li>Mobile launch stand included</li>
-                    <a href="#"><img id="actionbtn" alt="To cart!" src="/acme/images/site/iwantit.gif"></a>
-                </ul>
+                    <li class="nolist"><a href="#"><img id="actionbtn" alt="To cart!" src="/acme/images/site/iwantit.gif"></a></li>
+
+                    </ul>
+
             </section>
+
 
             <div id="divReview">
                 <section id="reviewsMain">
