--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                 <li><a href="/acme/template.html" title="acme template page" class="button">Acme Template</a></li>
 
                 <li><a href="/acme/index.html" title="acme project page" class="button">Acme Project</a></li>
+
+                <li><a href="https://youtu.be/DMZipwxqTz0" title="acme project video" class="button">Acme Project Video</a></li>
             </ul>
             <br/>
             <br/>
