--- a/letmeeat/terms-and-conditions.html
+++ b/letmeeat/terms-and-conditions.html
@@ -59,7 +59,7 @@
         <p><strong>License to Us</strong>: By uploading content, you grant us a worldwide, non-exclusive, royalty-free license to use, display, and distribute your content within the App.</p>
         
         <h2>6. Privacy</h2>
-        <p>Your use of the App is also governed by our <a href="privacy_policy.html">Privacy Policy</a>, which can be found <a href="privacy_policy.html">here</a>.</p>
+        <p>Your use of the App is also governed by our <a href="https://sidneyluiz.github.io/letmeeat/privacy.html">Privacy Policy</a>, which can be found <a href="https://sidneyluiz.github.io/letmeeat/privacy.html">here</a>.</p>
         
         <h2>7. Termination</h2>
         <p>We reserve the right to suspend or terminate your access to the App at our sole discretion, without notice, if you violate these Terms or engage in any conduct that we deem harmful to the App or other users.</p>
