--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span>a wordpress fan.</span>
                 <span>a chocolate lover.</span>
                 </span>
-                <br/> I live in a small town somewhere in the world.<br/> I'm 27 years old, I have <strong>two kids, and a beautiful wife.</strong>
+                <br/> I live in a small town somewhere in the world.<br/> I'm 34 years old, I have <strong>four kids, and a beautiful wife.</strong>
                 <br/>
             </h2>
         </section>
@@ -68,7 +68,7 @@
     <footer>
         <p>Copyright &copy; 2018 Sidney Rodrigues</p>
         <a href="mailto:sidneyluiz@byui.edu" id="mail">sidneyluiz@byui.edu</a> -
-        <small>Last Updated: 03 February 2018</small>
+        <small>Last Updated: 12 July 2024</small>
     </footer>
 
 </body>
